# swimbikesit_study

./: .gitignore  Amplitudes_GNG.txt  Amplitudes_SME.txt  Latencies_GNG.txt  README.md  all_questionnaires.txt  performance_behav.txt  performance_table.txt  pyproject.toml  sub_info.txt  swimbikesit_00_sports_descriptive.py  swimbikesit_01_HR_plot.py  swimbikesit_02_questionnaires.py  swimbikesit_03_behav_descriptive.py  swimbikesit_04_behav_confirmatory.py  swimbikesit_04b_behav_exploratory.py
code/stats/: pyproject.toml  swimbikesit_00_sports_descriptive.py  swimbikesit_01_HR_plot.py  swimbikesit_02_questionnaires.py  swimbikesit_03_behav_descriptive.py  swimbikesit_04a_behav_confirmatory.py  swimbikesit_04b_behav_exploratory.py  swimbikesit_05a_eeg_confirmatory.py  swimbikesit_05b_eeg_exploratory.py
sports_01/: sports_01_HRM_post.csv
sports_02/: 1_sports_02_HRM.csv  1_sports_02_HRM2.csv  1_sports_02_HRM3.csv
sports_03/: 2023-09-20-10-46-04.csv  2023-09-20-11-12-46.csv
sports_04/: 2023-09-21-10-56-27.csv
sports_05/: 2023-09-22-11-01-39.csv
sports_06/: 2023-09-25-10-27-27.csv
sports_07/: 2023-09-27-10-49-41.csv
sports_09/: 2023-10-05-14-22-00.csv  2023-10-05-15-18-44.csv
sports_11/: 2023-10-06-14-13-32.csv  2023-10-06-14-44-05.csv  2023-10-06-15-10-50.csv
sports_12/: 2023-10-09-10-55-29.csv
sports_13/: 2023-10-10-10-17-55.csv  2023-10-10-10-45-14.csv
sports_14/: 2023-10-11-10-56-16.csv
sports_15/: 2023-10-11-14-46-03.csv  2023-10-11-15-13-41.csv
sports_16/: 2023-10-12-10-15-44.csv  2023-10-12-10-42-24.csv
sports_17/: 2023-10-12-14-51-22.csv
(+280 files in other folders)
