[tool.poetry]
name = "sports_analysis"
version = "0.1.0"
description = "A project for analyzing sports data"
authors = ["User"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.0"
matplotlib = "^3.6.0"
scipy = "^1.9.0"
seaborn = "^0.12.0"
statsmodels = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
